# c_dev_utils

./: AUTHORS  Makefile.am  README.md  configure.ac
cdatetime/: Makefile.am  cdatetime.c
cerror/: Makefile.am  cerror.c  cerror_generated.c  errors.txt
cerror/etc/: generate.sh  man_errors.sh  names.txt
chex/: Makefile.am  chex.c  chex.cc  color.c  color.h
cval/: Makefile.am  a.out  cval.cc
